<resources>
    <string name="app_name">Pexel</string>
    <string name="homepage_title">Photoplay</string>
    <string name="homepage_slogan">SLOGAN GOES HERE</string>
    <string name="discover_the_world">Discover the world best photos and videos</string>
    <string name="best_memories_online">Best memories online</string>
    <string name="search_photos">Search photos, videos, artists</string>
</resources>